--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header id="header" class="header">
         <h1 class="header__titulo" hidden>Seguro-Trip</h1>
         <nav class="header__nav">
             <div class="header__logo">
@@ -197,16 +197,16 @@
     </main>
 
     <footer id="footer" class="pie-pagina">
-        <div class="grupo-1">
+        <div id="logo__footer" class="grupo-1">
             <div class="box">
             <img class="img__footer" src="./Img/Logo Seguro Trip 2.png" alt="logoSt">
             </div>
-        <div class="box">
+        <div id="texto__footer" class="box">
             <h2>SOBRE NOSOTROS</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, vitae!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, vitae!</p>
         </div>
-            <div class="box">
+            <div id="redes__footer" class="box">
             <h2>SIGUENOS</h2>
             <div class="red-social">
                 <a href="http://facebook.com" target="_blank" class="fa fa-facebook"></a>
@@ -217,7 +217,7 @@
             </div>
         </div>
 
-        <div class="grupo-2">
+        <div id="pie__pag" class="grupo-2">
             <small>&copy;2023 <b>Seguro-Trip</b> - Todos Los Derechos Reservados</small>
         </div>
     </footer>
