--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -87,18 +87,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- <li>
-                                <h5>Basic</h5>
-                                <p>La cobertura básica incluye asistencia médica en caso de enfermedad o lesión durante tu viaje, así como repatriación en caso de emergencia. Está diseñada para brindar protección esencial a un costo accesible.</p>
-                            </li>
-                            <li>
-                                <h5>Plus</h5>
-                                <p>La cobertura Plus es una opción más amplia que incluye asistencia médica, repatriación, cancelación de viaje en caso de imprevistos y pérdida de equipaje. Es ideal para aquellos que desean una protección adicional durante sus viajes.</p>
-                            </li>
-                            <li>
-                                <h5>Top</h5>
-                                <p>La cobertura Top es nuestra opción más completa, que brinda asistencia médica, repatriación, cancelación de viaje, pérdida de equipaje y también gastos legales. Está diseñada para aquellos que buscan una protección integral y total tranquilidad durante sus viajes.</p>
-                            </li> -->
                         </div>
                     <div class="servicio__b">
                         <div class="servicio">
@@ -205,10 +193,12 @@
                 1
             </div>
             <div class="texto1">
-
+                <h3>Comprueba si necesitas un seguro para el país de destino</h3>
+                <p>Antes de viajar, investiga requisitos del destino. Algunos países exigen seguros de viaje para la entrada. Asegúrate de cumplir para evitar inconvenientes.</p>
             </div>
             <div class="texto2">
-
+                <h3>Elige el plan y cobertura</h3>
+                <p>Examina nuestras opciones. Cada plan está diseñado para diferentes necesidades y presupuestos. Escoge el que mejor se adapte a tu viaje.</p>
             </div>
             <div class="numero2">
                 2
@@ -223,10 +213,12 @@
                 3
             </div>
             <div class="texto3">
-
+                <h3>Imprime tu certificado</h3>
+                <p>Una vez adquirido tu seguro, imprime el certificado. Este documento puede ser requerido al viajar o enfrentar emergencias.</p>
             </div>
             <div class="texto4">
-
+                <h3>Garantía de devolución</h3>
+                <p>Si cambias de opinión, ofrecemos garantía de devolución. Consulta términos y condiciones para saber cómo y cuándo aplicar. Tu tranquilidad es nuestra prioridad.</p>
             </div>
             <div class="numero4">
                 4
