--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <h1 class="header__titulo" hidden>Seguro-Trip</h1>
         <nav class="header__nav">
             <div class="header__logo">
-                <a href="../index.html"><img class="img__header" src="../Img/Logo Seguro Trip 2.png" alt="logoSt"></a>
+                <a href="/index.html"><img class="img__header" src="../Img/Logo Seguro Trip 2.png" alt="logoSt"></a>
             </div>
             <ul class="header__menu">
                 <li class="header__item">
-                    <a href="./paginas/index.html">Inicio</a>
+                    <a href="/index.html">Inicio</a>
                 </li>
                 <li class="header__item">
                     <a href="/paginas/nosotros.html">Nosotros</a>
