--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -4,43 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="../css/estilo.css">
+    <script defer src="../js/index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Serif+Display&family=Inter&family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link rel="icon" href="../Img/favicon-32x32.png">
     <script src="https://kit.fontawesome.com/7517a92b76.js" crossorigin="anonymous"></script>
     <title>¿Que Ofrecemos?</title>
 </head>
 <body>
-    <header class="ser__header">
-        <h1 class="header__titulo" hidden>Seguro-Trip</h1>
-        <nav class="header__nav">
-            <div class="header__logo">
-                <a href="../index.html"><img class="img__header" src="../Img/Logo Seguro Trip 2.png" alt="logoSt"></a>
-            </div>
-            <ul class="header__menu">
-                <li class="header__item">
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li class="header__item">
-                    <a href="./nosotros.html">Nosotros</a>
-                </li>                
-                <li class="header__item">
-                    <a href="./servicios.html">Servicios</a>
-                </li>
-                <li class="header__item">
-                    <a href="./cotizador.html">Cotizador</a>
-                </li>
-                <li class="header__item">
-                    <a href="./contacto.html">Contacto</a>
-                </li>
-                <li class="header__item">
-                    <a href="./terminos.html">Terminos y Condiciones</a>
-                </li> 
+    <header class="header">
+        <nav class="nav">            
+            <a href="../index.html" class="logo nav-link"><img class="img__header" src="../Img/Logo Seguro Trip 2.png" alt="logoSt"></a>
+            <button class="nav-toggle" aria-label="Abrir menú">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            <ul class="nav-menu">
+                <li class="nav-menu-item"><a href="../index.html" class="nav-menu-link nav-link">Inicio</a></li>
+                <li class="nav-menu-item"><a href="./nosotros.html" class="nav-menu-link nav-link">Nosotros</a></li>
+                <li class="nav-menu-item"><a href="./servicios.html" class="nav-menu-link nav-link">Servicios</a></li>
+                <li class="nav-menu-item"><a href="./cotizador.html" class="nav-menu-link nav-link">Cotizador</a></li>
+                <li class="nav-menu-item"><a href="./contacto.html" class="nav-menu-link nav-link">Contacto</a></li>
+                <li class="nav-menu-item"><a href="./terminos.html" class="nav-menu-link nav-link nav-menu-link_active">Terminos</a></li>
             </ul>
-            
         </nav>
     </header>
     
