--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="./css/estilo.css">
     <script defer src="./js/index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/estilo.css">
     <link rel="icon" href="./Img/favicon-32x32.png">
     <script src="https://kit.fontawesome.com/7517a92b76.js" crossorigin="anonymous"></script>
     <title>Seguro-Trip</title>
@@ -20,17 +19,17 @@
 <body>
     <header class="header">
         <nav class="nav">            
-            <a href="/index.html" class="logo nav-link"><img class="img__header" src="../Img/Logo Seguro Trip 2.png" alt="logoSt"></a>
+            <a href="/index.html" class="logo nav-link"><img class="img__header" src="./Img/logo seguro trip 2.png" alt="logoSt"></a>
             <button class="nav-toggle" aria-label="Abrir menú">
                 <i class="fa-solid fa-bars"></i>
             </button>
             <ul class="nav-menu">
-                <li class="nav-menu-item"><a href="/index.html" class="nav-menu-link nav-link">Inicio</a></li>
-                <li class="nav-menu-item"><a href="/paginas/nosotros.html" class="nav-menu-link nav-link">Nosotros</a></li>
-                <li class="nav-menu-item"><a href="/paginas/servicios.html" class="nav-menu-link nav-link">Servicios</a></li>
-                <li class="nav-menu-item"><a href="/paginas/cotizador.html" class="nav-menu-link nav-link">Cotizador</a></li>
-                <li class="nav-menu-item"><a href="/paginas/contacto.html" class="nav-menu-link nav-link">Contacto</a></li>
-                <li class="nav-menu-item"><a href="/paginas/terminos.html" class="nav-menu-link nav-link nav-menu-link_active">Terminos</a></li>
+                <li class="nav-menu-item"><a href="./index.html" class="nav-menu-link nav-link">Inicio</a></li>
+                <li class="nav-menu-item"><a href="./paginas/nosotros.html" class="nav-menu-link nav-link">Nosotros</a></li>
+                <li class="nav-menu-item"><a href="./paginas/servicios.html" class="nav-menu-link nav-link">Servicios</a></li>
+                <li class="nav-menu-item"><a href="./paginas/cotizador.html" class="nav-menu-link nav-link">Cotizador</a></li>
+                <li class="nav-menu-item"><a href="./paginas/contacto.html" class="nav-menu-link nav-link">Contacto</a></li>
+                <li class="nav-menu-item"><a href="./paginas/terminos.html" class="nav-menu-link nav-link nav-menu-link_active">Terminos</a></li>
             </ul>
         </nav>
     </header>
