--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <nav class="nav">            
-            <a href="/index.html" class="logo nav-link"><img class="img__header" src="./Img/logo seguro trip 2.png" alt="logoSt"></a>
+            <a href="/index.html" class="logo nav-link"><img class="img__header" src="./Img/logo seguro-trip.png" alt="logo__header"></a>
             <button class="nav-toggle" aria-label="Abrir menú">
                 <i class="fa-solid fa-bars"></i>
             </button>
