--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -37,7 +37,7 @@
             <div class="container mt-5">
                 <div class="row mb-4">
                     <div class="col-12">
-                        <h2 class="bg-info text-white">Seguro-Trip:</h2>
+                        <h2>Seguro-Trip</h2>
                         <p>Tu compañero de viaje que te brinda la tranquilidad de explorar el mundo sabiendo que estás cubierto.
                         En Seguro-Trip, viajar es nuestra pasión. Queremos que vivas cada aventura al máximo, y por eso estamos contigo en cada paso, garantizando que solo coleccionas buenos momentos.</p>
                     </div>
