--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link rel="icon" href="./Img/favicon-32x32.png">
     <script src="https://kit.fontawesome.com/7517a92b76.js" crossorigin="anonymous"></script>
-    <title>Seguro-Trip</title>  
+    <title>Seguro-Trip | Tu Mejor Opción n Seguros</title>  
 </head>
 
 <body>
