--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -220,7 +220,7 @@
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
-            <img class="img__footer" src="../Img/Logo Seguro Trip 2.png" alt="logoSt">
+            <a href="../index.html" class="logo footer"><img class="img__footer" src="../Img/logo seguro trip 2.png" alt="logoSt"></a>
             </div>
         <div class="box">
             <h2>SOBRE NOSOTROS</h2>
