--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <footer id="footer" class="pie-pagina">
         <div id="logo__footer" class="grupo-1">
             <div class="box">
-            <img class="img__footer" src="./Img/Logo Seguro Trip 2.png" alt="logoSt">
+            <a href="./index.html" class="logo footer"><img class="img__footer" src="./Img/logo seguro trip 2.png" alt="logoSt"></a>           
             </div>
         <div id="texto__footer" class="box">
             <h2>SOBRE NOSOTROS</h2>
