--- a/paginas/terminos.html
+++ b/paginas/terminos.html
@@ -85,7 +85,8 @@
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
-            <a href="../index.html" class="logo footer"><img class="img__footer" src="../Img/logo seguro trip 2.png" alt="logoSt"></a>
+                <a href="../index.html" class="logo__fotter"><img src="../Img/logo seguro trip 2.png" alt="logoFooter" class="img__footer">
+                </a>
             </div>
         <div class="box">
             <h2>SOBRE NOSOTROS</h2>
