--- a/paginas/terminos.html
+++ b/paginas/terminos.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <nav class="nav">            
-            <a href="../index.html" class="logo nav-link"><img class="img__header" src="../Img/logo seguro-trip.png" alt="logo__header"></a>
+            <a href="../index.html" class="logo nav-link"><img class="img__header" src="../Img/logo-st.png" alt="logo__header"></a>
             <button class="nav-toggle" aria-label="Abrir menú">
                 <i class="fa-solid fa-bars"></i>
             </button>
@@ -85,8 +85,7 @@
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
-                <a href="../index.html" class="logo__fotter"><img src="../Img/logo seguro trip 2.png" alt="logoFooter" class="img__footer">
-                </a>
+                <a href="../index.html" class="logo footer"><img class="img__footer" src="../Img/logo-st.png" alt="logo__footer"></a>
             </div>
         <div class="box">
             <h2>SOBRE NOSOTROS</h2>
