actuaización de meta

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link rel="icon" href="./Img/favicon-32x32.png">
     <script src="https://kit.fontawesome.com/7517a92b76.js" crossorigin="anonymous"></script>
-    <title>Seguro-Trip | Tu Mejor Opción n Seguros</title>  
+    <title>Seguro-Trip | Tu Mejor Opción n Seguros</title>
+    <meta name="title" content="Seguro-Trip | Tu Mejor Opción en Seguros de Viaje">
+    <meta name="description" content="Bienvenido a Seguro-Trip, tu mejor opción en seguros de viaje. Protege tus aventuras y viaja con confianza. Descubre nuestros planes y servicios personalizados.">
+    <meta name="keywords" content="Seguro-Trip, seguros de viaje, viajar protegido, seguros personalizados, viajar con confianza">
+    <meta name="author" content="Seguro-Trip">
 </head>
 
 <body>
