--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -11,6 +11,10 @@
     <link rel="icon" href="../Img/favicon-32x32.png">
     <script src="https://kit.fontawesome.com/7517a92b76.js" crossorigin="anonymous"></script>
     <title>Contacto | Seguro-Trip</title>
+    <meta name="title" content="Contacto | Seguro-Trip">
+    <meta name="description" content="¿Tienes dudas o consultas? Ponte en contacto con nosotros. En Seguro-Trip estamos listos para ayudarte y resolver todas tus inquietudes sobre nuestros seguros de viaje.">
+    <meta name="keywords" content="Seguro-Trip, seguros de viaje, contacto, atención al cliente, soporte">
+    <meta name="author" content="Seguro-Trip">
 </head>
 <body>
     <header class="header">
