--- a/paginas/cotizador.html
+++ b/paginas/cotizador.html
@@ -11,6 +11,10 @@
     <link rel="icon" href="../Img/favicon-32x32.png">
     <script src="https://kit.fontawesome.com/7517a92b76.js" crossorigin="anonymous"></script>
     <title>Cotizador | Seguro-Trip</title>
+    <meta name="title" content="Cotizador de Seguros | Seguro-Trip">
+    <meta name="description" content="Obtén una cotización rápida y confiable para tu seguro de viaje con Seguro-Trip. Ingresa tus detalles y descubre el plan perfecto para ti. Viaja con confianza y seguridad.">
+    <meta name="keywords" content="Seguro-Trip, seguros de viaje, cotizador, calcular seguro, presupuesto seguro viaje">
+    <meta name="author" content="Seguro-Trip">
 </head>
 <body class=".coti__body">
     <header class="header">
