--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -11,6 +11,10 @@
     <link rel="icon" href="../Img/favicon-32x32.png">
     <script src="https://kit.fontawesome.com/7517a92b76.js" crossorigin="anonymous"></script>
     <title>Nosotros | Seguro-Trip</title>
+    <meta name="title" content="Acerca de Nosotros | Seguro-Trip">
+    <meta name="description" content="Conoce más sobre Seguro-Trip, nuestro compromiso con la calidad y cómo trabajamos para ofrecerte los mejores seguros de viaje. Descubre nuestra historia y misión.">
+    <meta name="keywords" content="Seguro-Trip, seguros de viaje, sobre nosotros, historia, misión, visión">
+    <meta name="author" content="Seguro-Trip">
 </head>
 <body>
     <header class="header">
