--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -11,6 +11,10 @@
     <link rel="icon" href="../Img/favicon-32x32.png">
     <script src="https://kit.fontawesome.com/7517a92b76.js" crossorigin="anonymous"></script>
     <title>Servicios | Seguro-Trip</title>
+    <meta name="title" content="Servicios de Seguro de Viaje | Seguro-Trip">
+    <meta name="description" content="Descubre los servicios exclusivos de seguro de viaje que ofrece Seguro-Trip. Desde seguros básicos hasta coberturas completas para tus aventuras.">
+    <meta name="keywords" content="seguro de viaje, coberturas, servicios, Seguro-Trip, viaje seguro, seguros internacionales">
+    <meta name="author" content="Seguro-Trip">
 </head>
 <body>
     <header class="header">
