--- a/paginas/terminos.html
+++ b/paginas/terminos.html
@@ -11,6 +11,10 @@
     <link rel="icon" href="../Img/favicon-32x32.png">
     <script src="https://kit.fontawesome.com/7517a92b76.js" crossorigin="anonymous"></script>
     <title>Terminos y Condiciones | Seguro-Trip</title>
+    <meta name="title" content="Términos y Condiciones de Uso | Seguro-Trip">
+    <meta name="description" content="Términos y condiciones de Seguro-Trip. Infórmate sobre las condiciones de uso, privacidad y demás términos relacionados con nuestros servicios de seguros de viaje.">
+    <meta name="keywords" content="Seguro-Trip, seguros de viaje, términos y condiciones, política de privacidad">
+    <meta name="author" content="Seguro-Trip">
 </head>
 <body>
     <header class="header">
