--- a/index.html
+++ b/index.html
@@ -172,8 +172,7 @@
             </div>
         <div id="texto__footer" class="box">
             <h2>SOBRE NOSOTROS</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, vitae!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, vitae!</p>
+            <p>Tu compañero de viaje que te brinda la tranquilidad de explorar el mundo sabiendo que estás cubierto. En Seguro-Trip, viajar es nuestra pasión. Queremos que vivas cada aventura al máximo, y por eso estamos contigo en cada paso, garantizando que solo coleccionas buenos momentos.</p>
         </div>
             <div id="redes__footer" class="box">
             <h2>SIGUENOS</h2>
