--- a/404.html
+++ b/404.html
@@ -37,8 +37,8 @@
                 <img class="img-404" src="../Img/error404.png" alt="error404">
                 <h1 class="tittle__404">Error 404</h1>
                 <h2>La página que ha solicitado no se encuentra disponible</h2>        
-                <div class="button-404">
-                    <button>Volver a página principal <a href="../index.html"></a></button>
+                <!-- <div class="button-404">
+                    <button>Volver a página principal <a href="../index.html"></a></button> -->
                     
                 </div>
             </div>
