--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="./index.html" class="logo nav-link"><img class="img__header" src="/Img/logo-st.png" alt="logo__header"></a>
+            <a href="./index.html" class="logo nav-link"><img class="img__header" src="./Img/logo-st.png" alt="logo__header"></a>
             <button class="nav-toggle" aria-label="Abrir menú">
                 <i class="fa-solid fa-bars"></i>
             </button>
@@ -47,7 +47,7 @@
     <footer id="footer" class="pie-pagina">
         <div id="logo__footer" class="grupo-1">
             <div class="box">
-                <a href="./index.html" class="logo footer"><img class="img__footer" src="/Img/logo-st.png" alt="logo__footer"></a>
+                <a href="./index.html" class="logo footer"><img class="img__footer" src="./Img/logo-st.png" alt="logo__footer"></a>
             </div>
         <div id="texto__footer" class="box">
             <h2>SOBRE NOSOTROS</h2>
