--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex, follow">
 </head>
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <nav class="nav">
             <a href="./index.html" class="logo nav-link"><img class="img__header" src="./Img/logo-st.png" alt="logo__header"></a>
             <button class="nav-toggle" aria-label="Abrir menú">
@@ -30,7 +30,7 @@
                 <li class="nav-menu-item"><a href="./paginas/terminos.html" class="nav-menu-link nav-link nav-menu-link_active">Terminos</a></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
     <section class="body-404">
         <div class="main-404">
             <div class="error-404">
@@ -44,7 +44,7 @@
             </div>
         </div>
     </section>
-    <footer id="footer" class="pie-pagina">
+    <!-- <footer id="footer" class="pie-pagina">
         <div id="logo__footer" class="grupo-1">
             <div class="box">
                 <a href="./index.html" class="logo footer"><img class="img__footer" src="./Img/logo-st.png" alt="logo__footer"></a>
@@ -67,7 +67,7 @@
         <div id="pie__pag" class="grupo-2">
             <small>&copy;2023 <b>Seguro-Trip</b> - Todos Los Derechos Reservados</small>
         </div>
-    </footer>
+    </footer> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="/js/index.js"></script>
 </body>
