--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -327,7 +327,7 @@
             </div>
         <div class="box">
             <h2>SOBRE NOSOTROS</h2>
-            <p>Tu compañero de viaje que te brinda la tranquilidad de explorar el mundo sabiendo que estás cubierto. En Seguro-Trip, viajar es nuestra pasión. Queremos que vivas cada aventura al máximo, y por eso estamos contigo en cada paso, garantizando que solo coleccionas buenos momentos.</p>
+            <p>Seguro-Trip es tu compañero al viajar, permitiéndote explorar el mundo con confianza y tranquilidad, asegurando que cada aventura sea memorable y positiva.</p>
         </div>
             <div class="box">
             <h2>SIGUENOS</h2>
