--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -41,7 +41,7 @@
             </h2>
             <div class="container__guia">
                 <div class="img1">
-                    <img width="150px" src="../Img/1 Comprobar.png" alt="comprobar">
+                    <img src="../Img/1 Comprobar.png" alt="comprobar">
                 </div>
                 <div class="numero1">
                     <p>1</p>
@@ -62,10 +62,10 @@
                     </div>
                 </div>
                 <div class="img2">
-                    <img width="150px" src="../Img/2 Elige.png" alt="elegir">
+                    <img src="../Img/2 Elige.png" alt="elegir">
                 </div>
                 <div class="img3">
-                    <img width="150px" src="../Img/3 Imprime.png" alt="imprimir">
+                    <img src="../Img/3 Imprime.png" alt="imprimir">
                 </div>
                 <div class="numero3">
                     <p>3</p>
@@ -84,7 +84,7 @@
                     4
                 </div>
                 <div class="img4">
-                    <img width="150px" src="../Img/4 devolucion.png" alt="devolucion">
+                    <img src="../Img/4 devolucion.png" alt="devolucion">
                 </div>
             </div>
         </section>
@@ -144,31 +144,31 @@
                                 <div class="accordion accordion-flush" id="accordionFlushExample">
                                     <div class="accordion-item">
                                         <h2 class="accordion-header">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
                                             <h5>Basic</h5>
                                         </button>
                                         </h2>
-                                        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                                         <div class="accordion-body">Cobertura básica que incluye protección contra daños y responsabilidad civil.</div>
                                         </div>
                                     </div>
                                     <div class="accordion-item">
                                         <h2 class="accordion-header">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
                                             <h5>Plus</h5>
                                         </button>
                                         </h2>
-                                        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                                         <div class="accordion-body">Cobertura ampliada que incluye protección contra daños, responsabilidad civil y robo.</div>
                                         </div>
                                     </div>
                                     <div class="accordion-item">
                                         <h2 class="accordion-header">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
                                             <h5>Top</h5>
                                         </button>
                                         </h2>
-                                        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div id="flush-collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                                         <div class="accordion-body">Cobertura completa que incluye protección contra daños, responsabilidad civil, robo y asistencia en carretera.</div>
                                         </div>
                                     </div>
@@ -185,31 +185,31 @@
                                 <div class="accordion accordion-flush" id="accordionFlushExample">
                                     <div class="accordion-item">
                                         <h2 class="accordion-header">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSevent" aria-expanded="false" aria-controls="flush-collapseSevent">
                                             <h5>Basic</h5>
                                         </button>
                                         </h2>
-                                        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div id="flush-collapseSevent" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                                         <div class="accordion-body">Cobertura básica que incluye protección contra incendios y daños estructurales.</div>
                                         </div>
                                     </div>
                                     <div class="accordion-item">
                                         <h2 class="accordion-header">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEigth" aria-expanded="false" aria-controls="flush-collapseEigth">
                                             <h5>Plus</h5>
                                         </button>
                                         </h2>
-                                        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div id="flush-collapseEigth" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                                         <div class="accordion-body">Cobertura ampliada que incluye protección contra incendios, robos y daños estructurales.</div>
                                         </div>
                                     </div>
                                     <div class="accordion-item">
                                         <h2 class="accordion-header">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseNine" aria-expanded="false" aria-controls="flush-collapseNine">
                                             <h5>Top</h5>
                                         </button>
                                         </h2>
-                                        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div id="flush-collapseNine" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                                         <div class="accordion-body">Cobertura completa que incluye protección contra incendios, robos, daños estructurales y responsabilidad civil.</div>
                                         </div>
                                     </div>
@@ -232,7 +232,7 @@
             </div>
         <div class="box">
             <h2>SOBRE NOSOTROS</h2>
-            <p>Tu compañero de viaje que te brinda la tranquilidad de explorar el mundo sabiendo que estás cubierto. En Seguro-Trip, viajar es nuestra pasión. Queremos que vivas cada aventura al máximo, y por eso estamos contigo en cada paso, garantizando que solo coleccionas buenos momentos.</p>
+            <p>Seguro-Trip es tu compañero al viajar, permitiéndote explorar el mundo con confianza y tranquilidad, asegurando que cada aventura sea memorable y positiva.</p>
         </div>
             <div class="box">
             <h2>SIGUENOS</h2>
